- Frame number is now the default box on the "go to" dialog. (AMZ)
- Added "Video Formats" to "Open Audio"'s file selector, so you can open audio directly from video files (regardless of whether they're loaded or not). This has always worked, but it was never explicit. (AMZ)
- Added a "Scale Border and Shadow" check box to script properties dialog. (AMZ)
- Fixed display of end frames on the subtitles grid, when set to frame mode. (demi)
- Treat comments inside {}'s as plain text, not as overrides; Also, don't assume override blocks start with a backslash, even if they probably should (Dansolo)
- Removed FexTracker due to licensing problems; there are plans to implement a new motion tracker in its place (jfs)
- Changed translation assistent to use Scintilla text controls to avoid several issues, including Right-To-Left text entry. (AMZ)
- Joining of two lines will no longer take the timings of any line that starts and ends at 0 into consideration. (AMZ)
- Added a "new window" command to the file menu, to launch a new instance of Aegisub. (AMZ)
- Added "Effect" field to the Select Lines dialog. (demi`)
- Added a new "Video Details" dialog, that lists some information regarding the currently open video. (demi`)


= 1.10 beta - 2006.08.07 ===========================

- Always defaults to Audio Cache=1 (ram) now (Myrsloik)
- Automation: Added xor(a,b) boolean logical function to utils.lua (jfs)
- Automation: Various changes to karaskel.lua and karaskel-adv.lua: (jfs)
   o Added some debug-calls (which are disabled by default; aegisub.output_debug is replaced with a do-nothing function (you can change this in karaskel.lua)
   o The regular aegisub.output_debug is aliased to aegisub.output_warning, in order to always be able to show real warnings, in case something goes wrong
   o Fixed bug, triggered when a line had a style not defined in the subs. A warning is now shown instead.