@@ -242,8 +242,6 @@ private:
 	void LoadVideo(wxString filename,bool autoload=false);
 	void LoadAudio(wxString filename,bool FromVideo=false);
 	void LoadVFR(wxString filename);
-	void LoadKeyframes(wxString filename);
-	void SaveKeyframes(wxString filename);
 	void LoadSubtitles(wxString filename,wxString charset=_T(""));
 	bool SaveSubtitles(bool saveas=false,bool withCharset=false);
 	int TryToCloseSubs(bool enableCancel=true);
